[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/sprites/cards/card.png" type="Texture" id=1]
[ext_resource path="res://assets/fonts/alagard.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/scripts/cards/card_ui.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 8
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 8
font_data = ExtResource( 2 )

[node name="Card" type="TextureRect"]
margin_right = 48.0
margin_bottom = 64.0
texture = ExtResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Grid" type="GridContainer" parent="."]
margin_left = 25.0
margin_top = 3.0
margin_right = 45.0
margin_bottom = 23.0
custom_constants/vseparation = 1
custom_constants/hseparation = 1
columns = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TOP_LEFT" type="ColorRect" parent="Grid"]
margin_right = 6.0
margin_bottom = 6.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.431373, 1, 0, 0 )

[node name="TOP_CENTER" type="ColorRect" parent="Grid"]
margin_left = 7.0
margin_right = 13.0
margin_bottom = 6.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.431373, 1, 0, 0 )

[node name="TOP_RIGHT" type="ColorRect" parent="Grid"]
margin_left = 14.0
margin_right = 20.0
margin_bottom = 6.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.431373, 1, 0, 0 )

[node name="MID_LEFT" type="ColorRect" parent="Grid"]
margin_top = 7.0
margin_right = 6.0
margin_bottom = 13.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.431373, 1, 0, 0 )

[node name="MID_CENTER" type="ColorRect" parent="Grid"]
margin_left = 7.0
margin_top = 7.0
margin_right = 13.0
margin_bottom = 13.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.431373, 1, 0, 0 )

[node name="MID_RIGHT" type="ColorRect" parent="Grid"]
margin_left = 14.0
margin_top = 7.0
margin_right = 20.0
margin_bottom = 13.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.431373, 1, 0, 0 )

[node name="BOT_LEFT" type="ColorRect" parent="Grid"]
margin_top = 14.0
margin_right = 6.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.431373, 1, 0, 0 )

[node name="BOT_CENTER" type="ColorRect" parent="Grid"]
margin_left = 7.0
margin_top = 14.0
margin_right = 13.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.431373, 1, 0, 0 )

[node name="BOT_RIGHT" type="ColorRect" parent="Grid"]
margin_left = 14.0
margin_top = 14.0
margin_right = 20.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.431373, 1, 0, 0 )

[node name="Numbers" type="VBoxContainer" parent="."]
margin_left = 2.0
margin_top = 4.0
margin_right = 22.0
margin_bottom = 24.0
custom_constants/separation = 0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="HPLabel" type="Label" parent="Numbers"]
margin_right = 20.0
margin_bottom = 10.0
size_flags_vertical = 7
custom_fonts/font = SubResource( 1 )
text = "100"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MPLabel" type="Label" parent="Numbers"]
margin_top = 10.0
margin_right = 20.0
margin_bottom = 20.0
size_flags_vertical = 7
custom_fonts/font = SubResource( 1 )
text = "100"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -21.0
margin_right = 21.0
margin_bottom = 25.0
custom_constants/line_spacing = 0
custom_fonts/font = SubResource( 2 )
text = "Card Name"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}
